--- a/TheRtmForTheKids/TranslationHelper/package.json
+++ b/TheRtmForTheKids/TranslationHelper/package.json
@@ -4,6 +4,7 @@
   "description": "Program helping to build The RTM for the Kids in different languages",
   "main": "main.js",
   "dependencies": {
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "xml-js": "^1.6.11"
   }
 }
