--- a/TheRtmForTheKids/TranslationHelper/.gitignore
+++ b/TheRtmForTheKids/TranslationHelper/.gitignore
@@ -1,1 +1,13 @@
 node_modules
+
+*-ar_version.sla
+*-cat_version.sla
+*-en_version.sla
+*-es_version.sla
+*-fr_version.sla
+
+*-ar_version.svg
+*-cat_version.svg
+*-en_version.svg
+*-es_version.svg
+*-fr_version.svg
