add(Esperanto/The RTM for the Kids): generated files (and add some lost corrections in previous PR integration)

--- a/TheRtmForTheKids/TranslationHelper/.gitignore
+++ b/TheRtmForTheKids/TranslationHelper/.gitignore
@@ -1,11 +1,13 @@
 node_modules
 
+*-eo_version.sla
 *-ar_version.sla
 *-cat_version.sla
 *-en_version.sla
 *-es_version.sla
 *-fr_version.sla
 
+*-eo_version.svg
 *-ar_version.svg
 *-cat_version.svg
 *-en_version.svg
